featured-bar-post styles fixed for alignment, also widget changes 	played around with changing selector orders with .less '&' operator

--- a/assets/less/featured-bar.less
+++ b/assets/less/featured-bar.less
@@ -10,8 +10,8 @@
     margin: 0 -30px 20px;
     text-shadow: none;
 
-    .featured-bar-post {
-        margin: 0 0 10px -30px;
+    &.featured-bar-post {
+        margin: 10px 0 30px -60px;
         padding: 15px 15px 15px 30px;
     }
 }
