--- a/assets/less/footer.less
+++ b/assets/less/footer.less
@@ -9,7 +9,7 @@
         color:@primaryColorDark;
         &:hover,
         &:focus{
-            color:@primaryColorLight;
+            color:@primaryColor;
         }
     }
     #footer-site-title{
