--- a/assets/less/widgets.less
+++ b/assets/less/widgets.less
@@ -31,11 +31,11 @@
             line-height: 24px;
         }
     }
-}
 
-.widget_recent_entries{
-    li {
-        padding: 5px 0;
-        line-height: 20px;
+    .widget_recent_entries & {
+        li {
+            padding: 5px 0;
+            line-height: 20px;
+        }
     }
 }
